--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "env-xmonad"]
 	path = env-xmonad
 	url = git@github.com:hicolour/env-xmonad.git
+[submodule "env-roxterm"]
+	path = env-roxterm
+	url = git@github.com:hicolour/env-roxterm.git
