--- a/env-git/.gitconfig
+++ b/env-git/.gitconfig
@@ -24,6 +24,12 @@
 
 
 
+
+    # incubation
+    gbr = --for-each-ref --sort="-authordate:iso8601" --format=" %(color:green)%(authordate:iso8601)%09%(color:white)%(refname:short)" refs/heads
+
+
+
     #toolbox ?
     a = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\\\t => \\2/' | sort
     aa = "!git config -l | grep alias | cut -c 7-"
