--- a/env-git/.gitconfig
+++ b/env-git/.gitconfig
@@ -1,8 +1,14 @@
 [user]
 
-    #user placeholder
-	email = marek.prochera@gmail.com
-	name = Marek Prochera
+    #Default User
+    email = marek.prochera@gmail.com
+    name = Marek Prochera
+
+[includeIf "gitdir:~/projects/work/"]
+    path = ~/work/.gitconfig
+
+[includeIf "gitdir:~/projects/personal/"]
+    path = ~/personal/.gitconfig
 
 [color]
     ui = auto
