--- a/env-git/.gitconfig
+++ b/env-git/.gitconfig
@@ -1,8 +1,8 @@
 [user]
 
     #Default User
-    email = marek.prochera@gmail.com
-    name = Marek Prochera
+	email = marek.prochera@amartus.com
+	name = Marek Prochera
 
 [includeIf "gitdir:~/projects/work/"]
     path = ~/work/.gitconfig
