--- a/units/git/.gitconfig
+++ b/units/git/.gitconfig
@@ -203,3 +203,8 @@ name = Marek Prochera
 [help]
     autocorrect = 1 #fucking magic!
 
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
